Moved jade fiels

--- a/cloudlet_platform.conf
+++ b/cloudlet_platform.conf
@@ -154,7 +154,7 @@ cloudlet_platform_host = Host(name = 'localhost', routes = {
   '/openi-builder'       : openi_builder_proxy,
   '/api/doc'             : api_framework_proxy,
   '/v.04/'               : api_framework_proxy,
-  '/admin'               : static_directory,
+  '/admin/login'         : static_directory,
   '/admin'               : admin_dashboard_handler,
   '/apiadmin'            : api_framework_proxy,
   '/user'                : user_dashboard_handler,
