--- a/cloudlet_platform.conf
+++ b/cloudlet_platform.conf
@@ -3,6 +3,10 @@ static_directory = Dir(base='static/',
                      index_file='index.html',
                      default_ctype='text/html')
 
+admin_login_dir = Dir(base='static/admin/',
+                     index_file='login.html',
+                     default_ctype='text/html')
+
 
 api_specs_directory = Dir(base='api-specs/',
                      index_file='index',
@@ -154,7 +158,7 @@ cloudlet_platform_host = Host(name = 'localhost', routes = {
   '/openi-builder'       : openi_builder_proxy,
   '/api/doc'             : api_framework_proxy,
   '/v.04/'               : api_framework_proxy,
-  '/admin/login'         : static_directory,
+  '/admin/login'         : admin_login_dir,
   '/admin'               : admin_dashboard_handler,
   '/apiadmin'            : api_framework_proxy,
   '/user'                : user_dashboard_handler,
